# Spectral-Simulation-Methods

./: README.md  pyproject.toml
Milestone 3/: turbulence_simulation.py
Milestone1/: combined_script.py  curl_implement.py
Milestone2/: taylor_green_vortex.py
Milestone4/: turbulence_simulation.py
outputs/milestone1/: 01_output_terminal.txt
outputs/milestone2/: 02_output_terminal.txt
