[tool.poetry]
name = "simulation-using-python"
version = "1.0.0"
description = "spectral simulation using python"
authors = ["Gurmeher Singh Puri"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "1.21.5"
matplotlib = "3.5.2"
scipy = "1.8.0"
sympy = "1.12"
pandas = "1.5.0"
torch = "2.1.1"
jinja2 = "3.1.2"
joblib = "1.3.2"
mufft = "0.92.0"
mugrid = "0.92.4"
networkx = "3.1"
attrs = "23.1.0"
cycler = "0.12.1"
filelock = "3.13.1"
fonttools = "4.43.1"
fsspec = "2023.12.1"
iniconfig = "2.0.0"
kiwisolver = "1.4.5"
markupsafe = "2.1.3"
mpmath = "1.3.0"
packaging = "23.2"
pillow = "10.1.0"
pluggy = "1.3.0"
py = "1.11.0"
pycodestyle = "2.8.0"
pyparsing = "3.1.1"
pytest = "7.1.2"
python-dateutil = "2.8.2"
pytz = "2023.3.post1"
scikit-learn = "1.1.0"
six = "1.16.0"
threadpoolctl = "3.2.0"
tomli = "2.0.1"
typing-extensions = "4.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
